[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameStats.gd" type="Script" id=1]

[node name="GameStats" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 16.0
text = "Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 5.61655
margin_top = 16.3885
margin_right = 61.6165
margin_bottom = 30.3885
text = "00:00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -85.8472
margin_top = 1.53885
margin_right = -3.84717
margin_bottom = 15.5388
text = "Fastest Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 504.744
margin_top = 20.3898
margin_right = 560.744
margin_bottom = 34.3898
text = "00:00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
